# Mobile-Object-Detector-using-OnnxruntimeAPK-plus-Yolo11m-onnx

./: .gitignore  LICENSE  README.md  modules_list.txt
DetectTO/: app.json  package-lock.json  package.json  settings.gradle  tailwind.config.js
DetectTO/app/: _layout.tsx  build.gradle  index.tsx
DetectTO/app/(tabs)/: _layout.tsx  detection.tsx  index.tsx  saved.tsx  settings.tsx
DetectTO/app/detectionstates/: detection_camera.tsx  detection_image.tsx
DetectTO/app/image_details/: [id].tsx
DetectTO/app/src/androidTest/java/com/detection/detectto/: ExampleInstrumentedTest.kt
DetectTO/app/src/main/: AndroidManifest.xml
DetectTO/app/src/main/java/com/detection/detectto/: MainActivity.kt  ModelAdapter.kt  (+5 more)
DetectTO/app/src/main/res/drawable/: bg_bottom_sheet.xml  bg_handle_bar.xml
DetectTO/app/src/main/res/layout/: activity_main.xml  bottom_sheet.xml  list_buttons.xml  on_boarding.xml  preview_page.xml  result_item.xml  result_page.xml
DetectTO/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
DetectTO/app/src/main/res/values-night/: themes.xml
DetectTO/assets/images/: images.ts
DetectTO/assets/utils/: models_seeker.tsx
DetectTO/components/: bottomsheet.tsx  loading.tsx  upload_image.tsx  use_camera.tsx  viewonly_img.tsx
DetectTO/constants/: onnx_runner.ts
DetectTO/cpp/: CMakeLists.txt  draw_box.cpp  nmsfilter.cpp
DetectTO/gradle/wrapper/: gradle-wrapper.properties
DetectTO/node_modules 4-40-00-241 PM/: .package-lock.json
DetectTO/node_modules 4-40-00-241 PM/onnxruntime-react-native/: package.json
nmsFiles/: nms.cpp
(+1 files in other folders)
